--- a/frontend/components/organisms/EditarUsuarioModal/Index.module.css
+++ b/frontend/components/organisms/EditarUsuarioModal/Index.module.css
@@ -33,9 +33,9 @@
   width: 100px !important;
   height: 30px;
   border-radius: 4px;
-  color: #072525 !important;
+  color: #fff !important;
   text-transform: none !important;
-  background: #e1f292 !important;
+  background: #5f5fff !important;
   border: 1px solid #072525 !important;
   margin: 0px 0px !important;
   padding: 2px 30px !important;
@@ -48,7 +48,7 @@
 
 .btn:hover {
   color: #fff !important;
-  background: #072525 !important;
+  background: #303094 !important;
   border: 1px solid #072525 !important;
   cursor: pointer !important;
   -webkit-transition: all 300ms ease-out;
