--- a/frontend/components/organisms/NuevoReporteModal/NuevoIngreso.module.css
+++ b/frontend/components/organisms/NuevoReporteModal/NuevoIngreso.module.css
@@ -15,6 +15,22 @@
   padding-left: 15px;
 }
 
+.select2 {
+  display: inline-block;
+  width: 49.5% !important;
+  border: 1px solid #000;
+  margin-bottom: 8px !important;
+  vertical-align: top;
+}
+
+.select2 select {
+  padding-left: 15px;
+}
+
+.select2 select option {
+  width: 50% !important;
+}
+
 .Mt {
   margin-top: 8px;
 }
