--- a/frontend/app/inventarios/index.module.css
+++ b/frontend/app/inventarios/index.module.css
@@ -11,7 +11,7 @@
   padding-top: 1.4rem;
 }
 
-.BorderBottom {
+/*.BorderBottom {
   box-shadow: 0px 1px 0px 0px #b7b7b7;
 }
 
@@ -21,7 +21,7 @@
 
 .Logo img {
   width: 170px;
-}
+}*/
 
 h1.title {
   color: #083636;
@@ -62,7 +62,7 @@ h1.title {
   padding: 0px !important;
 }
 
-.BtnLogIn svg {
+/*.BtnLogIn svg {
   font-size: 30px;
   margin-top: -11px;
 }
@@ -74,7 +74,7 @@ h1.title {
 
 .BtnLogIn:hover svg {
   color: #083636;
-}
+}*/
 
 .ContentLoadding {
   text-align: center;
