--- a/frontend/app/ventas/ingresos.module.css
+++ b/frontend/app/ventas/ingresos.module.css
@@ -5,7 +5,7 @@
   padding-top: 1.4rem;
 }
 
-.BorderBottom {
+/*.BorderBottom {
   box-shadow: 0px 1px 0px 0px #b7b7b7;
   margin-bottom: 10px;
 }
@@ -16,7 +16,7 @@
 
 .Logo img {
   width: 170px;
-}
+}*/
 
 h1.title {
   color: #083636;
@@ -57,7 +57,7 @@ h1.title {
   padding: 0px !important;
 }
 
-.BtnLogIn svg {
+/*.BtnLogIn svg {
   font-size: 30px;
   margin-top: -11px;
 }
@@ -69,7 +69,7 @@ h1.title {
 
 .BtnLogIn:hover svg {
   color: #083636;
-}
+}*/
 
 .ContentLoadding {
   text-align: center;
