--- a/frontend/app/permisos/index.module.css
+++ b/frontend/app/permisos/index.module.css
@@ -1,21 +1,8 @@
 .main {
   background-color: white;
   min-height: 100vh;
-  padding: 5rem;
   padding-top: 1.4rem;
 }
-
-/*.BorderBottom {
-  box-shadow: 0px 1px 0px 0px #b7b7b7;
-}
-
-.Logo {
-  margin-bottom: 25px;
-}
-
-.Logo img {
-  width: 100px;
-}*/
 
 .main button {
   margin: 0px auto;
@@ -26,22 +13,8 @@
   padding: 0px !important;
 }
 
-/*.BtnLogIn svg {
-  font-size: 30px;
-  margin-top: -11px;
-}
-
-.BtnLogIn:hover {
-  color: #083636;
-  background: none !important;
-}
-
-.BtnLogIn:hover svg {
-  color: #083636;
-}*/
-
 .center {
-  max-width: 800px;
+  /* max-width: 800px; */
   margin: 0px auto;
   color: #072525 !important;
   font: 16px "Roboto","Helvetica","Arial",sans-serif;
