--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -153,6 +153,13 @@ input[type=number]::-webkit-outer-spin-button {
   border: 1px solid #000;
 }
 
+.css-1mtsuo7 {
+  z-index: 1300;
+  z-index: 1300;
+  background: #fff;
+  border: 1px solid #000;
+}
+
 .css-v0pjtz-MuiStack-root {
   display: inline-block;
   width: 49.5% !important;
