--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -153,7 +153,8 @@ input[type=number]::-webkit-outer-spin-button {
   border: 1px solid #000;
 }
 
-.base-Popper-root {
+
+.MuiPickersPopper-root {
   z-index: 1300;
   z-index: 1300 !important;
   background: #fff !important;
